style.css
/* ... */
*::-webkit-scrollbar {
  display: none !important;
}

.jq-toast-loader.jq-toast-loaded {
  display: none !important;
}

body {
  background: #333;
  font-family: "Source Sans Pro", sans-serif;
}

.hidden {
  display: none;
}

.full-absolute {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

.modal {
  width: 80%;
  max-width: 280px;
  height: 50%;
  overflow: visible !important;
}

.page-dependent {
  display: inline;
}

video {
  transform: rotateY(180deg);
}

.profile-switch {
  position: fixed;
  top: 0;
  left: 100%;
  z-index: 999999;
}

.body-wrapper {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 100%;
  height: 90%;
  max-width: 280px;
  max-height: 580px;
  border-radius: 6px;
  overflow: hidden;
  box-shadow: 0px 0px 50px 10px rgba(0, 0, 0, 0.2);
}
@media only screen and (max-width: 600px) {
  .body-wrapper {
    max-width: 100%;
    max-height: 100%;
    border: none !important;
    height: 100%;
  }
}
.body-wrapper:after {
  content: "";
  position: absolute;
  top: -2px;
  left: -2px;
  right: -2px;
  bottom: -2px;
  z-index: -1;
}

.flex {
  display: flex;
}
.flex > * {
  flex: 1 1 auto;
  align-self: stretch;
}

.navbar,
.bottom-nav,
#home-page {
  position: absolute !important;
  left: 0;
  width: 100%;
}

.navbar,
.bottom-nav {
  z-index: 99;
}

.navbar,
.bottom-nav {
  display: none;
}
.navbar.active,
.bottom-nav.active {
  display: flex;
}

.navbar {
  background: white;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  border-bottom: 2px solid #ddd;
  padding: 7px 0;
}
.navbar > * {
  padding: 0 12px;
}
.navbar .left {
  display: flex;
}
.navbar .left .camera-btn {
  background: url("https://cdn3.iconfinder.com/data/icons/instagram-18/512/192_Instagram_Camera_Image-512.png");
  width: 24px;
  height: 100%;
  background-position: center;
  background-size: auto 100%;
  background-repeat: no-repeat;
  margin-right: 10px;
}
.navbar .left .logo {
  background-image: url("https://www.instagram.com/static/images/web/mobile_nav_type_logo.png/735145cfe0a4.png");
  background-size: auto 100%;
  background-repeat: no-repeat;
  transform: translate(0, 2px);
  width: 100%;
  height: 20px;
  background-position: left;
}
.navbar .right {
  display: flex;
  justify-content: flex-end;
}
.navbar .right .dm-icon {
  background: url("https://cdn.clipart.email/7ea8c17048b1e012c1cc87ebdc83d010_chat-communication-dm-email-letter-mail-message-icon_512-512.png");
  height: 100%;
  width: 20px;
  background-size: auto 100%;
  background-repeat: no-repeat;
  background-position: center;
}

.bottom-nav {
  background: white;
  color: #111;
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  padding: 10px 0;
}
.bottom-nav#default-bottom-nav {
  padding: 0;
  box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.3);
}
.bottom-nav#default-bottom-nav .nav-btn {
  flex: 1 0 auto;
  position: relative;
  text-align: center;
  font-size: 1.15em;
  border-bottom: 2px solid white;
  padding: 5px 0;
}
.bottom-nav#default-bottom-nav .nav-btn.active {
  border-bottom: 2px solid black;
}

#gallery-page-bottom-nav {
  padding: 0;
}
#gallery-page-bottom-nav .tabs {
  display: flex;
  width: 100%;
  overflow: hidden;
  height: 40px;
  background: white;
}
#gallery-page-bottom-nav .tabs .tab {
  cursor: pointer;
  width: 33.33%;
  padding: 4px 0;
  flex: 1 1 auto;
  text-align: center;
  background: white;
  position: relative;
  top: 1px;
  color: #888;
  text-transform: uppercase;
  font-weight: 600;
  font-size: 0.8em;
  letter-spacing: 0.05em;
  display: flex;
  align-items: center;
  justify-content: center;
  border-bottom: 1px solid white;
}
#gallery-page-bottom-nav .tabs .tab.active {
  color: #111;
  border-bottom: 1px solid black;
}

.page {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: #FAFAFA;
  overflow-y: auto;
  overflow-x: hidden;
  z-index: 1;
  display: none;
}
.page.active {
  display: block !important;
}
.page .page-content {
  padding: 35px 0px 60px 0px;
}

@keyframes heart-jump {
  0% {
    transform: scale(1);
    opacity: 0;
  }
  20% {
    transform: scale(1.35);
    opacity: 1;
  }
  30% {
    transform: scale(1.2);
    opacity: 1;
  }
  60% {
    transform: scale(1.2);
    opacity: 1;
  }
  100% {
    transform: scale(0);
    opacity: 0;
  }
}
.default-bg, .page-logo {
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  background-color: black;
}

.page-logo {
  padding: 13px;
  background-color: #bbb;
  border-radius: 50%;
  flex: 0 0 auto;
  align-self: center;
}

.post {
  background: white;
  font-size: 13px;
  font-weight: 600;
}
.post .header {
  width: 100%;
  background: white;
  border-bottom: 1px solid gainsboro;
  padding: 5px 10px;
}
.post .header .left .name-group {
  align-self: center;
  margin: -2px 0 0 10px;
}
.post .header .left .name-group .location {
  font-size: 0.9em;
}
.post .header .left .name-group .others {
  font-size: 0.9em;
  margin-left: 2px;
  position: relative;
  top: -0.05em;
}
.post .header .left .name-group .other-person {
  cursor: pointer;
  margin-right: 5px;
  font-weight: bold;
  color: #666;
}
.post .header .left .name-group .others::before {
  content: 'com ';
  font-weight: normal;
  color: #666;
}
.post .header .left .name-group .other-person:not(:last-of-type)::after {
  content: ',';
}
.post .content .image {
  position: relative;
}
.post .content .image .heart-overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  align-items: center;
  justify-content: center;
  color: rgba(255, 255, 255, 0.7);
  font-size: 50px;
  text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.15);
  visibility: hidden;
  z-index: 8;
}
.post .content .image .heart-overlay.active {
  visibility: visible;
  animation: heart-jump 1.2s forwards;
}
.post .content .image img {
  width: 100%;
}
.post .content .bottom-info {
  padding: 8px 12px;
}
/* ... */

